--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,5 +8,6 @@
 </head>
 <body style="text-align:center">
     <h1>Welcome</h1>
+    <a href="/panda.mobile">Panda Mobile</a>
 </body>
 </html>
