--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body style="text-align:center">
     <h1>Welcome</h1>
-    <a href="/panda.mobile">Panda Mobile</a>
+    <a href="/pandamobile">Panda Mobile</a>
 </body>
 </html>
