--- a/PandaMobile/index.html
+++ b/PandaMobile/index.html
@@ -24,7 +24,7 @@
   <link rel="apple-touch-icon" href="assets/lib/assets/panda.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="assets/lib/assets/panda.png" href="favicon.png"/>
+  <link rel="icon" type="assets/lib/assets/panda.png" href="assets/lib/assets/panda.png"/>
 
   <title>panda</title>
   <link rel="manifest" href="manifest.json">
